src/App.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

body {
    display: flex;
    justify-content: center;
    font-weight: 400;
    font-size: 18px;
    background-color: rgb(14, 14, 14);
    color: rgb(228, 228, 228);
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
}

p, h1, h2, h3 {
    padding: 0;
    margin: 0;
}

.App {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.mainContainer {
    display: flex;
    justify-content: center;
    align-items: center;
}

header {
    padding-right: 5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 5rem;
}

header h1 {
    font-size: 2.75rem;
    font-weight: 600;
}

header h2 {
    padding: 0.75rem 0;
    font-weight: 400;
    font-size: 1.5rem;
}

header h2 {
    width: 700px;
}

.inputSearchBar {
    display: flex;
    align-items: center;
}

input {
    height: 2.5rem;
}

.inputSearchBar button {
    all: revert;
    text-transform: uppercase;
    background-color: rgb(34, 34, 34);
    height: 2.5rem;
    padding: 0 1rem;
    font-size: 1.15rem;
    margin-left: 0.05rem;
    border: none;
    cursor: pointer;
    transition: all 0.25s ease;
    letter-spacing: 0.07rem;
}

.inputSearchBar button:hover {
    background-color: rgb(43, 93, 215);
}

.AppContainer {
    background-color: rgb(43, 93, 215);
    width: 400px;
    height: 680px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    border-radius: 75px;
    position: relative;
    border-top: 5px solid white;
    border-bottom: 5px solid white;
    border-right: 8px solid white;
    border-left: 8px solid white;
}

.city {
    padding-top: 2.5rem;
    font-weight: normal;
    letter-spacing: 0.075rem;
    text-transform: capitalize;
}

.mainMaxMinTempContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding-bottom: 6rem;
}

.temp {
    font-size: 3.75rem;
    padding-right: 1rem;
    padding-top: 1rem;
}

.maxMinTempContainer {
    padding-right: 1rem;
    padding-top: 0.75rem;
}

.description {
    text-transform: capitalize;
    font-size: 1.3rem;
}

.feelsLikeTemp {
    font-size: 1.1rem;
    padding-top: 0.3rem;
    margin-bottom: 3rem;
}

.city {
    font-size: 1.5rem;
    font-weight: 600;
}

.bottomHalfContainer {
    width: 384px;
    height: 55%;
    background-color: rgb(11, 19, 53);
    border-radius: 60px 60px 75px 75px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
}

img {
    width: 95%;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.extras {
    width: 100%;
    display: flex;
    justify-content: center;
    padding-bottom: 2.5rem;
}

.extraInfoContainer {
    width: 100px;
    height: 100px;
    background-color: rgb(43, 93, 215);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
    text-align: center;
    margin: 0.5rem 0.5rem 0 0.5rem;
}

.extraInfoTitle {
    font-size: 0.75rem;
}

.extraInfoDescription {
    font-size: 0.90rem;
}

.footerContainer {
    font-size: 0.8rem;
    width: 100%; 
    position: absolute;
    bottom: 0;
}

.footerContainer a {
    color: rgb(43, 93, 215);
}

.footerContainer a:hover {
    color: rgb(132, 132, 255);
}

